# gridmapDJ

./: pyproject.toml
gridmap/: manage.py  map.html
gridmap/griddata/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gridmap/gridmap/: asgi.py  settings.py  urls.py  wsgi.py
gridmap/maphandle/: map.py  transfer.py
gridmap/templates/: base.html  emembers.html  esupport.html  gridnode.html  index.html
