[tool.poetry]
name = "gridmapdj"
version = "0.1.0"
description = ""
authors = ["cyyy"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
